# pharo-mcp-server

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: format.yml  test.yml
pharo_mcp_server/: __init__.py  core.py  server.py
pharo_nc_mcp_server/: core.py  server.py
scripts/: README.md  format.sh  start-neoconsole-repl.sh  test.sh
tests/: __init__.py  test_core.py  test_integration.py  test_server.py
